--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -19,6 +19,7 @@
     padding-left: 0vw !important;
     /* 导航栏右侧最远至，为 0 时到达最右侧，覆盖原来的位置 */
     padding-right: 0vw !important;
+    box-sizing: border-box; /* 确保内外边距不会影响宽度 */
   }
   /* 导航栏标题左、右侧缩进，同时 padding-left 决定了搜索框的位置  */
 .VPNavBar {
