--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -46,10 +46,10 @@
     width: 15vw !important;
   }
   /* 文本左、右缩进（整体） */
-/*   .VPContent.has-sidebar {
-    padding-left: 15% !important;
-    padding-right: 15% !important;
-  }*/
+  .VPContent.has-sidebar {
+    padding-left: 20vw !important;
+    padding-right: 15vw !important;
+  }
     .VPDoc.has-aside .content-container {
   max-width: 100% !important;
 }
