--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -59,7 +59,13 @@
   
 }
 
+@media (min-width: 1440px) {
+  
+}
 
+@media (min-width: 960px) {
+  
+}
   .outline-link{
   /* 对于任何尺寸均使 TOC 文本换行*/
    white-space: normal !important;
