--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -66,6 +66,10 @@
 @media (min-width: 960px) {
   
 }
+
+@media (min-width: 4090px) {
+  
+}
   .outline-link{
   /* 对于任何尺寸均使 TOC 文本换行*/
    white-space: normal !important;
