--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -67,7 +67,12 @@
   
 }
 @media (min-width: 3840px) {
-  
+  .VPNavBar .content {
+    /* 导航栏左侧最远至，为 0 时到达最左侧，覆盖原来的位置 */
+    padding-left: 5vw !important;
+    /* 导航栏右侧最远至，为 0 时到达最右侧，覆盖原来的位置 */
+    padding-right: 0vw !important;
+  }
 }
 
 
