--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -7,6 +7,9 @@
 .vp-doc a {
   text-decoration: none;
 }
+
+
+
 @media (min-width: 1920px) {
 /* 导航栏 */
   .VPNavBar {
@@ -55,6 +58,8 @@
 }
 }
 
+
+/*
 @media (min-width: 2388px) {
   
 }
@@ -65,11 +70,13 @@
 
 @media (min-width: 960px) {
   
-}
+} */
+
+
 @media (min-width: 3840px) {
   .VPNavBar .content {
 .VPNavBar {
-  padding-left:  25vw !important;
+  padding-left:  20vw !important;
   padding-right: 5vw !important;
 }
     /* 导航栏左侧最远至，为 0 时到达最左侧，覆盖原来的位置 */
