--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -8,7 +8,7 @@
   text-decoration: none;
 }
 
-
+/*
 
 @media (min-width: 1920px) {
 /* 导航栏 */
@@ -57,7 +57,7 @@
   max-width: 100% !important;
 }
 }
-
+*/
 
 /*
 @media (min-width: 2388px) {
@@ -73,7 +73,7 @@
 } 
 
 
-@media (min-width: 2560px) {
+@media (min-width: 3840px) {
   .VPNavBar .content {
 .VPNavBar {
   padding-left:  20vw !important;
