--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -8,13 +8,15 @@
   text-decoration: none;
 }
 
+@media (min-width: 960px) {
+  
+}
 
 
-
- @media (min-width: 1440px) {
+ @media (min-width: 1920px) {
 /* 导航栏 */
   .VPNavBar {
-  padding-left:  25vw !important;
+  padding-left:  10vw !important;
   padding-right: 5vw !important;
 }
   .VPNavBar .content {
